Fix O(n²) backpropagation: replace LinkedList with ArrayList
backup() used path.get(i) in a reverse indexed loop. LinkedList.get(i)
is O(n), making backpropagation O(depth²). Switching to ArrayList gives
O(1) indexed access, making backpropagation O(depth).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>